# sample-project

./: CMakeLists.txt
bar/: CMakeLists.txt
foo/: CMakeLists.txt
